<resources>
    <string name="app_name">android_structure</string>

    <string name="check_your_network_connection_and_try_again">Check your network connection and try again</string>
    <string name="timeout_error_message">Looks like the server is taking too long to respond, please try again in
        sometime
    </string>
    <string name="tap_to_retry">Tab to retry</string>
    <string name="ok">Ok</string>
    <string name="dismiss">Dismiss</string>
    <string name="loading">Loading...</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="myaccount">My account</string>
    <string name="notifications">Notifications</string>
    <string name="setting">Settings</string>
    <string name="help">Help</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="user_name">Username</string>
    <string name="change_language">Change Language</string>
    <string name="language">Language</string>
    <string name="home">Home</string>
    <string name="feedback">Feedback</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="arabic_language_code" translatable="false">ar</string>
    <string name="english_language_code" translatable="false">en</string>
    <string name="select_language">Select Language</string>
    <string name="option_not_activ_now">Option dons\'t activ now</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_sign_out_q">Are you sure you want to sign out</string>
    <string name="forget_password">ForgetPassword ?</string>
    <string name="dont_have_an_account_q">Don\'t have an account?</string>
    <string name="register_underlined"><u>Register</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rest_password">Rest Password</string>
    <string name="enter_phone_number">Please enter your phone number to rest your password</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="verification_phone">Verification Phone</string>
    <string name="ask_verification_code">Please enter the 4 digit code sent to your phone</string>
    <string name="resend_code">Resend code</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="address">Address</string>
    <string name="sign">Sign</string>
    <string name="do_you_have_account">Do you have an account ?</string>
    <string name="login_underlined">Login</string>
    <string name="or_sign_with">Or Sign up with</string>
    <string name="invalid_phone">Invalid Phone</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="fill_data">Fill data</string>
    <string name="invalid_name">Invalid name</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAt5t6hKxU1wCyAZ1JQMT-gPjtCSp3FeQo</string>
    <string name="loading_address">Loading Address...</string>
    <string name="wont_detect_location">wont_detect_location</string>
    <string name="app_wont_be_ablet_o_detect_your_location">App won\'t be able to detect your location</string>
    <string name="service_not_available">Service not available</string>
    <string name="location_not_valid">location not valid</string>
    <string name="no_address_found">No address found</string>
    <string name="write_a_message">write message</string>
    <string name="new_message">you have new messages</string>
    <string name="entry_friend_name">Entry frind name</string>
    <string name="not_found">Not Found</string>
    <string name="permission_required_body">Please Enable permission from app settings</string>
    <string name="picker_camera">Camera</string>
    <string name="media_picker_gallery">Gallary</string>
    <string name="media_picker_select_from">Pick Image From :</string>
    <string name="label_pick_image">Pick Image</string>

<!--<html>
<body>

<h1>My First Heading</h1>

<p>My first paragraph.</p>

</body>
</html>
-->
    <string name="htmlsource">
        <![CDATA[<html>
<marquee width="60%" direction="right" height="100px">
This is a sample scrolling text that has scrolls texts to right This is a sample scrolling text that has scrolls texts to right This is a sample scrolling text that has scrolls texts to right.
</marquee>
</html>]]></string>


</resources>
