<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
    app:cardCornerRadius="8dp"
        android:layout_width="match_parent"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        <TextView
            style="@style/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="2dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/media_picker_select_from"
        />

        <View android:layout_width="match_parent" android:layout_height="1dp"
              android:background="@color/grey"
              android:layout_marginTop="8dp"
        />
        <TextView
            style="@style/textViewNoraml"
                android:id="@+id/tvCamera"
                android:layout_width="match_parent"
                android:layout_gravity="start"
                android:drawablePadding="8dp"
                android:foregroundTint="@color/grey"
                android:layout_marginTop="12dp"
                android:drawableStart="@drawable/ic_camera"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/picker_camera"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
        />


        <TextView
            style="@style/textViewNoraml"
                android:id="@+id/tvGallery"
                android:layout_width="match_parent"
                android:layout_gravity="start"
                android:drawablePadding="8dp"
                android:textSize="14sp"
                android:foregroundTint="@color/grey"
                android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_picture"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/media_picker_gallery"
        />

        <LinearLayout android:layout_width="match_parent"
                      android:gravity="end"
                      android:layout_marginEnd="8dp"
                      android:layout_gravity="end"
                      android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/tvCancel"
                    android:layout_width="wrap_content"
                    android:layout_gravity="start"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:drawablePadding="8dp"
                    android:paddingBottom="8dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:gravity="end"
                    android:text="@string/cancel"
            />
        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>