<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:background="@color/colorWhite"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="0dp">

        <ImageView
            android:layout_width="120dp"
            android:src="@drawable/rent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@id/ivLogo"
            android:layout_marginTop="16dp"
            android:layout_height="120dp" />

        <TextView
            android:id="@id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo" />


        <RelativeLayout
            android:id="@+id/loutUserName"
            android:layout_width="match_parent"
            android:background="@drawable/blue_border_rounded_cornwe"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/inputUsername"
                android:layout_width="match_parent"
                android:drawableStart="@drawable/ic_person"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/user_name"
                android:textSize="14sp"
                android:inputType="textEmailAddress"
                android:paddingTop="8dp"
                android:layout_marginStart="8dp"
                android:drawablePadding="8dp"
                android:paddingBottom="8dp"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@drawable/blue_border_rounded_cornwe"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:id="@+id/loutPassword"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/loutUserName"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@id/inputPassword"
                android:layout_width="match_parent"
                android:drawableStart="@drawable/ic_locked"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/prompt_password"
                android:inputType="textEmailAddress"
                android:paddingTop="8dp"
                android:layout_marginStart="8dp"
                android:textSize="14sp"
                android:drawablePadding="8dp"
                android:paddingBottom="8dp"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/forget_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/loutPassword"
            app:layout_constraintTop_toBottomOf="@+id/loutPassword" />

        <Button
            android:id="@id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/blue_fill__rounded_color"

            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toTopOf="@+id/tvDontHaveAnAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvForgetPassword" />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierDontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="tvDontHaveAnAccount, tvRegister"
         />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@id/tvDontHaveAnAccount"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/dont_have_an_account_q"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvRegister"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@id/tvRegister"
            style="@style/AppTheme.ClickableTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/register_underlined"
            app:layout_constraintBottom_toBottomOf="@+id/tvDontHaveAnAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvDontHaveAnAccount"
            app:layout_constraintTop_toTopOf="@+id/tvDontHaveAnAccount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--  </androidx.cardview.widget.CardView>-->


</androidx.constraintlayout.widget.ConstraintLayout>